[feature-complete] Complete add API key option
Signed-off-by: Siddharth Kannan <kannan.siddharth12@gmail.com>

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chalk": "^1.1.1",
     "configstore": "^1.2.1",
     "confirm-simple": "^1.0.3",
+    "inquirer": "^0.9.0",
     "meow": "^3.3.0",
     "parse-json": "^2.2.0",
     "request": "^2.61.0"
