--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "arr-exclude": "^1.0.0",
     "chalk": "^1.1.1",
+    "cheerio": "^0.19.0",
     "configstore": "^1.2.1",
     "inquirer": "^0.9.0",
     "log-update": "^1.0.0",
