--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chalk": "^1.1.1",
     "cheerio": "^0.19.0",
     "configstore": "^1.2.1",
+    "in-array": "^0.1.0",
     "inquirer": "^0.9.0",
     "log-update": "^1.0.0",
     "meow": "^3.3.0",
