--- a/package.json
+++ b/package.json
@@ -26,8 +26,19 @@
     "test": "mocha"
   },
   "files": [
+    "addApiKey.js",
+    "checkPnrStatus.js",
+    "deletePnrs.js",
+    "test.js",
+    "addPnr.js",
+    "cli.js",
     "index.js",
-    "cli.js"
+    "checkAllPnrStatus.js",
+    "defineSelectors.js",
+    "getPnrs.js",
+    "libs",
+    "examples",
+    "tools.js"
   ],
   "keywords": [
     "cli-app",
